code/force-app/main/default/objects/User/fields/Belong_Country__c.field-meta.xml
<CustomField>
    <fullName>Belong_Country__c</fullName>
    <label>隸屬國家</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CUB_Country</valueSetName>
    </valueSet>
</CustomField>