code/force-app/main/default/objects/User/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>負責客群</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Segment</valueSetName>
    </valueSet>
</CustomField>