code/force-app/main/default/objects/User/fields/Employee_No__c.field-meta.xml
<CustomField>
    <fullName>Employee_No__c</fullName>
    <defaultValue>null</defaultValue>
    <externalId>true</externalId>
    <label>員工編號</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>