code/force-app/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>所屬科別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Team</valueSetName>
    </valueSet>
</CustomField>