code/force-app/main/default/objects/User/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>所屬區部</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Name</valueSetName>
    </valueSet>
</CustomField>