code/force-app/main/default/objects/User/fields/Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Unit_Code__c</fullName>
    <label>所屬區部代號</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_Code</valueSetName>
    </valueSet>
</CustomField>