code/force-app/main/default/objects/User/fields/Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Unit_Name__c</fullName>
    <label>所屬區部名稱</label>
    <length>20</length>
    <type>Text</type>
</CustomField>